changed return to align better with return type